Fixed Overlapping length of the navbar search button

--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -143,7 +143,7 @@ label.search-icon i {
     right: 10px;
     top: 50%;
     transform: translateY(-50%);
-    line-height: 60px;
+    line-height: 54px;
     width: 70px;
     background: #171c24;
     border: none;
